# quantori-pesn-python-sdk

./: .gitignore  CODE_OF_CONDUCT.md  DEVNOTES.md  LICENSE.md  MANIFEST.in  NOTICE  README.md  bitbucket-pipelines.yml  mypy.ini  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  test_requirements.txt
.github/workflows/: pull_request.yml  tests.yml
docs/: base.html  jinja_env.html
docs/attributes/: attribute.html
docs/entities/: admin_defined_object.html  biological_sequence.html  chemical_drawing.html  container.html  contentful_entity.html  entity.html  entity_store.html  experiment.html  index.html  notebook.html  power_point.html  request.html  spotfire.html  uploaded_resource.html  word.html
docs/entities/parallel_experiment/: cell.html  parallel_experiment.html  sub_experiment.html
docs/entities/plates/: cell.html
docs/entities/samples/: index.html  sample.html  samples_container.html
docs/entities/stoichiometry/: cell.html  stoichiometry.html
docs/entities/tables/: table.html
docs/entities/todo_list/: index.html  task.html  task_container.html  todo_list.html
docs/entities/users/: user.html
docs/materials/: base_entity.html  batch.html  library.html  material.html  material_store.html
docs/signals_notebook/: api.html  base.html  common_types.html  exceptions.html  index.html  item_mapper.html
docs/signals_notebook/attributes/: attribute.html  index.html
docs/signals_notebook/entities/: admin_defined_object.html  biological_sequence.html  chemical_drawing.html  container.html  contentful_entity.html  entity.html  entity_store.html  excel.html  experiment.html  image.html  index.html  materials_table.html  notebook.html  power_point.html  request.html  spotfire.html  text.html  uploaded_resource.html  word.html
docs/users/: group.html  index.html  user.html  user_store.html
docs/utils/: fs_handler.html
examples/: AdminDefinableObject.ipynb  AdminDefinableTables.ipynb  AdminDefinedObject.ipynb  Attributes.ipynb  BiologicalSequence.ipynb  ChemicalDrawing.ipynb  EntityStore.ipynb  Excel.ipynb  Experiment.ipynb  FileUpload.ipynb  Group.ipynb  Image.ipynb  MaterialTable.ipynb  Materials.ipynb  Notebook.ipynb  ParallelExperiment.ipynb  PlateContainer.ipynb  PowerPoint.ipynb  README.md  Request.ipynb  Role.ipynb  Sample.ipynb  SampleSummary.ipynb  SamplesContainer.ipynb  Spotfire.ipynb  Stoichiometry.ipynb  SubExperiment.ipynb  SubExperimentLayout.ipynb  SubExperimentSummary.ipynb  Task.ipynb  TaskContainer.ipynb  Text.ipynb  TodoList.ipynb  UploadedResource.ipynb  User.ipynb  UserStore.ipynb  Users.ipynb  Word.ipynb  spotfiredxp.ipynb  test_report.html
examples/.ipynb_checkpoints/: Experiment-checkpoint.ipynb
examples/templates/: new_text_template.html
requirements/: all.txt  lint.txt  mypy.txt  others.txt  package.txt  tests.txt
signals_notebook/: api.py  types.py
signals_notebook/entities/: entity.py  experiment.py  notebook.py
src/signals_notebook/: __init__.py  api.py  base.py  common_types.py  exceptions.py  item_mapper.py  jinja_env.py  mime.types  types.py
tests/: __init__.py  conftest.py
tests/attributes/: conftest.py  factories.py  test_attribute.py
tests/common_types/: test_attrid.py  test_eid.py  test_mid.py
tests/entities/: conftest.py  factories.py  test_admin_defined_object.py  test_bio_sequence.py  test_chemical_drawing.py  test_entity.py  test_entity_store.py  test_excel.py  test_experiment.py  test_image.py  test_materials_table.py  test_notebook.py  test_parallel_experiment.py  test_powerpoint.py  test_request.py  test_spotfire.py  test_table.py  test_text.py  test_uploaded_resource.py  test_word.py
tests/materials/: conftest.py  factories.py  test_asset.py  test_batch.py  test_library.py  test_material_store.py
tests/test_types/: test_eid.py
tests/types/: test_eid.py
tests/users/: conftest.py  factories.py  test_group.py  test_role.py  test_user.py  test_user_store.py
(+203 files in other folders)
