[metadata]
name = pesn-python-sdk
version = 0.0.2
author = Evgeniy Pokidov
author_email = evgeniy.pokidov@quantori.com
description = PerkinElmer Signals Notebook Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bitbucket.org/quantori/pesn-python-sdk/
classifiers =
    Programming Language :: Python :: 3
    License :: Proprietary
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests~=2.27
    pydantic~=1.9

[options.extras_require]
dev = pytest==6.2.5;pytest-mock==3.7.0;arrow==1.2.2;factory-boy==3.2.1;pytest-factoryboy==2.1.0;pytest-cov==3.0.0;mypy==0.931

[options.packages.find]
where = src
