[metadata]
name = pesn-sdk
version = 1.2.3
author = Quantori
author_email = contact@quantori.com
description = Quantori Python SDK for PerkinElmer Signals Notebook
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quantori/quantori-pesn-python-sdk
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    Jinja2~=3.1.1
    requests~=2.27
    pydantic==1.10.4
    pandas~=1.4

[options.extras_require]
dev = pytest==6.2.5;pytest-mock==3.7.0;arrow==1.2.2;factory-boy==3.2.1;pytest-factoryboy==2.1.0;pytest-cov==3.0.0;mypy==1.0.0

[options.packages.find]
where = src

[flake8]
exclude =
    .git,
    __pycache__,
    env,
    venv,
    dist,
    snapshots,
classmethod-decorators =
    classmethod
    validator
inline-quotes = single
multiline-quotes = double
docstring-quotes = double
import-order-style = smarkets
ban-relative-imports = true
max-line-length = 120
max-complexity = 8
application-import-names =
    signals_notebook,
    tests,

ignore =
    # Missing trailing comma
    C812,
    C815,
    # Model does not define __str__ method
    DJ08,
    # Line break before binary operator
    W503,
    # argument "format" is shadowing a python builtin
    A002,
    A003,
    # may be undefined, or defined from star imports
    F405,


